--- a/src/main/web/static/app/user/registration/registration_form.html
+++ b/src/main/web/static/app/user/registration/registration_form.html
@@ -1,7 +1,50 @@
 <h2>Registration</h2>
-<form>
-    <input type="email" />
-    <input type="password" />
-    <input type="password" />
-    <input type="submit" name="Submit" value="Send">
+<form #registrationForm="ngForm">
+    <input type="email"
+           id="email"
+           name="email"
+           required
+           [(ngModel)]="registrationUser.email"
+           #email="ngModel"
+           placeholder="Enter your e-mail"/>
+
+    <br>
+    <div [hidden]="email.valid || email.pristine" class="error-message">
+        Please enter e-mail!
+    </div>
+
+    <input type="password"
+           required
+           id="password"
+           name="password"
+           [(ngModel)]="registrationUser.password"
+           #password="ngModel"
+           placeholder="Enter your password"/>
+
+    <br>
+    <div [hidden]="password.valid || password.pristine" class="error-message">
+        Please enter password!
+    </div>
+
+    <input type="password"
+           required
+           id="repeatPassword"
+           name="repeatPassword"
+           [(ngModel)]="registrationUser.repeatPassword"
+           #repeatPassword="ngModel"
+           placeholder="Repeat your password"/>
+
+    <br>
+    <div [hidden]="repeatPassword.valid || repeatPassword.pristine" class="error-message">
+        Please repeat password!
+    </div>
+    <div [hidden]="hidden">
+        Passwords not equals!
+    </div>
+
+    <button (click)="onSubmit()" >Submit</button>
 </form>
+{{registrationUser.email}}
+{{registrationUser.password}}
+{{registrationUser.repeatPassword}}
+{{registrationResponse | json}}
